Fix dockbar flickering in default view

--- a/docroot/_diffs/css/custom_default.css
+++ b/docroot/_diffs/css/custom_default.css
@@ -81,4 +81,14 @@ $colorBackground: #F5F5F5;
 	#content {
 		min-height: 70%;
 	}
+
+	.portlet-dockbar {
+		.dockbar {
+			display: none;
+
+			&.toggler-content-expanded {
+				display: block;
+			}
+		}
+	} 
 }
